--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="mood.html" class="button">Mood Tracker</a>
     </nav>
     <main>
-        <p>Welcome to your personal diary! Record your thoughts, track your moods, and reflect on your journey.</p>
+        <p>Welcome to your diary! Record your thoughts, track your moods, and reflect on your journey.</p>
     </main>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
